# vasttrafik_mastodon_bot

./: Cargo.toml  README.md  config.toml.example
src/: config.rs  main.rs  news.rs
