[package]
name = "vasttrafik_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
elefren = "0.22.0"
env_logger = "0.10.0"
log = "0.4.19"
reqwest = "0.11.18"
scraper = "0.16.0"
serde = "1.0.164"
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.7.4"
